# MTCNN-light

./: CMakeLists.txt
include/: bbox.h  mtcnn.h
src/: mtcnn.cpp  mtcnn.h  network.cpp  network.h  pBox.h  pikaqiu.cpp
src/demo/: pikaqiu.cpp
src/mtcnn/: mtcnn.cpp  network.cpp  network.h  pBox.cpp  pBox.h
src/python/: mtcnn_module.cpp
src/wrapper/: make_array.hpp
